--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button type="button" id="submitButton">submit</button><br>
     <label id="cLabel"></label><br>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
